Fix [a11y] background and foreground contrast ratio (#72)
Fixes #24

--- a/css/core.scss
+++ b/css/core.scss
@@ -707,7 +707,7 @@ blockquote footer,
 blockquote small {
   font-size: 80%;
   line-height: 1.42857143;
-  color: #777;
+  color: #595959;
 }
 
 blockquote .small:before,
